--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,12 @@
 		<version>2.4.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.natasha</groupId>
-	<artifactId>helpdeskforstudentsversion2</artifactId>
+	<groupId>com.yrgo</groupId>
+	<artifactId>helpappforstudents</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>helpdeskforstudentsversion2</name>
+	<name>helpappforstudents</name>
 	<description>Spring MVC</description>
-
+	
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -35,8 +35,8 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -71,6 +71,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+		</dependency>		
+		
 	</dependencies>
 
 	<build>
