--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,13 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix= .jsp
 spring.mvc.static-path-pattern=/resources/**
 
-spring.datasource.url=jdbc:mysql://localhost:3306/helpapp_db
-spring.datasource.username=helpapp
-spring.datasource.password=helpapp
-
+spring.jpa.show-sql: true
+spring.jpa.hibernate.ddl-auto: update
+spring.datasource.url: jdbc:postgresql://localhost:5432/Hjalpinatorn
+spring.datasource.username: aoife
+spring.datasource.password: martin
+spring.datasource.driverClassName: org.postgresql.Driver
+spring.jpa.properties.hibernate.jdbc.time_zone: UTC
 
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
