--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.mvc.static-path-pattern=/resources/**
 
 spring.jpa.show-sql: true
 spring.jpa.hibernate.ddl-auto: update
-spring.datasource.url: jdbc:postgresql://localhost:5432/Hjalpinatorn
-spring.datasource.username: aoife
-spring.datasource.password: martin
+spring.datasource.url: jdbc:postgresql://localhost:5432/YourDatabaseName
+spring.datasource.username: yourusername
+spring.datasource.password: yourpassword
 spring.datasource.driverClassName: org.postgresql.Driver
 spring.jpa.properties.hibernate.jdbc.time_zone: UTC
 
